--- a/ProjectGreen/app/src/main/res/layout/fragment_admin_tune_rewards.xml
+++ b/ProjectGreen/app/src/main/res/layout/fragment_admin_tune_rewards.xml
@@ -185,7 +185,7 @@
                 android:id="@+id/divider7"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:background="?android:attr/listDivider" />
+                android:background="@color/white" />
 
         </LinearLayout>
 
