--- a/ProjectGreen/app/src/main/res/layout/list_user_item.xml
+++ b/ProjectGreen/app/src/main/res/layout/list_user_item.xml
@@ -6,8 +6,7 @@
     android:layout_marginHorizontal="10dp"
     android:layout_marginVertical="10dp"
     app:cardCornerRadius="20dp"
-    app:cardElevation="8dp"
-    >
+    app:cardElevation="8dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -37,13 +36,16 @@
 
         <TextView
             android:id="@+id/listUserName"
-            android:layout_width="200dp"
-            android:layout_height="35dp"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
             android:layout_marginStart="5dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="20dp"
             android:layout_toEndOf="@+id/listMatName"
             android:fontFamily="@font/candara"
             android:text="Dasilas"
+            android:textAlignment="textStart"
             android:textSize="16sp" />
 
     </RelativeLayout>
