--- a/ProjectGreen/app/src/main/res/layout/fragment_create_account_screen.xml
+++ b/ProjectGreen/app/src/main/res/layout/fragment_create_account_screen.xml
@@ -116,7 +116,7 @@
         android:ems="10"
         android:fontFamily="@font/candara"
         android:hint="@string/enter_full_name"
-        android:inputType="text"
+        android:inputType="text|textPersonName|textAutoComplete|textAutoCorrect"
         android:padding="10dp"
         android:textColor="@color/font_dark_green"
         app:layout_constraintBottom_toTopOf="@+id/txtbox_email"
@@ -135,9 +135,8 @@
         android:ems="10"
         android:fontFamily="@font/candara"
         android:hint="@string/passwd"
-        android:inputType="text"
+        android:inputType="text|textPassword"
         android:padding="10dp"
-        android:password="true"
         android:textColor="@color/font_dark_green"
         app:layout_constraintBottom_toTopOf="@+id/btnCreateNewAccount"
         app:layout_constraintEnd_toEndOf="parent"
@@ -165,7 +164,7 @@
         android:ems="10"
         android:fontFamily="@font/candara"
         android:hint="@string/enter_email"
-        android:inputType="text"
+        android:inputType="text|textEmailAddress|textAutoComplete|textAutoCorrect"
         android:padding="10dp"
         android:textColor="@color/font_dark_green"
         app:layout_constraintBottom_toTopOf="@+id/btnCreateNewAccount"
