--- a/ProjectGreen/app/src/main/res/layout/fragment_admin_view_leaderboard.xml
+++ b/ProjectGreen/app/src/main/res/layout/fragment_admin_view_leaderboard.xml
@@ -26,18 +26,18 @@
             <ListView
                 android:id="@+id/listTopUsersView"
                 android:layout_width="match_parent"
-                android:layout_height="320dp"
+                android:layout_height="329dp"
                 android:layout_marginTop="12dp"
+                android:layout_marginBottom="10dp"
                 android:divider="@android:color/transparent"
                 android:dividerHeight="10.0sp"
                 android:scrollbars="vertical"
-                android:layout_marginBottom="10dp"
                 tools:listitem="@layout/list_user_item" />
 
             <View
                 android:id="@+id/divider3"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="30dp"
                 android:background="?android:attr/listDivider" />
 
             <TextView
@@ -57,7 +57,7 @@
             <View
                 android:id="@+id/divider4"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="30dp"
                 android:background="?android:attr/listDivider" />
 
             <TextView
@@ -77,8 +77,7 @@
             <View
                 android:id="@+id/divider6"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:background="?android:attr/listDivider" />
+                android:layout_height="60dp" />
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
