--- a/ProjectGreen/app/src/main/res/layout/fragment_admin_approve_screen.xml
+++ b/ProjectGreen/app/src/main/res/layout/fragment_admin_approve_screen.xml
@@ -16,24 +16,52 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/detailApproveName"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="14dp"
-                android:text="@string/request_to_recycle"
-                android:textSize="24sp"
-                android:fontFamily="@font/candara_bold"/>
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="3dp"
+                android:gravity="start"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/btnMatApprScreenToBack"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:src="@drawable/arrow_back" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:id="@+id/detailApproveName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:fontFamily="@font/candara_bold"
+                    android:text="@string/request_to_recycle"
+                    android:textSize="24sp"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1.5" />
+
+
+            </LinearLayout>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardImage"
                 android:layout_width="380dp"
                 android:layout_height="200dp"
                 android:layout_gravity="center"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp"
                 app:cardCornerRadius="20dp"
                 app:cardElevation="8dp">
 
@@ -54,10 +82,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="20dp"
+                android:fontFamily="@font/candara_bold"
                 android:text="User name:"
                 android:textColor="@color/font_dark_green"
-                android:textSize="16sp"
-                android:fontFamily="@font/candara_bold" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/textUserName"
@@ -83,10 +111,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="20dp"
+                android:fontFamily="@font/candara_bold"
                 android:text="@string/request_time"
                 android:textColor="@color/font_dark_green"
-                android:textSize="16sp"
-                android:fontFamily="@font/candara_bold" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/textReqTime"
@@ -103,10 +131,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="20dp"
+                android:fontFamily="@font/candara_bold"
                 android:text="@string/material1"
                 android:textColor="@color/font_dark_green"
-                android:textSize="16sp"
-                android:fontFamily="@font/candara_bold" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/textMatType"
@@ -131,10 +159,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="20dp"
+                android:fontFamily="@font/candara_bold"
                 android:text="@string/recycle_value"
                 android:textColor="@color/font_dark_green"
-                android:textSize="16sp"
-                android:fontFamily="@font/candara_bold" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/textMatTotalVule"
@@ -157,8 +185,8 @@
                 <Button
                     android:id="@+id/btnApprove"
                     android:layout_width="150dp"
-                    android:layout_marginEnd="10dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
                     android:fontFamily="@font/candara_bold"
                     android:text="@string/approve" />
 
@@ -170,7 +198,9 @@
                     android:fontFamily="@font/candara_bold"
                     android:text="@string/reject" />
 
+
             </LinearLayout>
+
             <View
                 android:id="@+id/divider"
                 android:layout_width="match_parent"
