--- a/ProjectGreen/app/src/main/res/layout/fragment_user_statistics.xml
+++ b/ProjectGreen/app/src/main/res/layout/fragment_user_statistics.xml
@@ -27,14 +27,17 @@
             </com.github.mikephil.charting.charts.PieChart>
 
 
-
             <ProgressBar
                 android:id="@+id/progressBar"
                 style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="37dp"
+                android:max="100"
+                android:min="0"
                 android:progress="72"
-                android:scaleY="3"
+                android:scaleY="5"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:textAlignment="center" />
 
             <TextView
@@ -44,6 +47,8 @@
                 android:fontFamily="@font/candara"
                 android:text="Progress Comment"
                 android:textAlignment="center"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:textSize="14sp"
                 android:textStyle="bold"/>
 
