--- a/ProjectGreen/app/src/main/res/layout/fragment_user_statistics.xml
+++ b/ProjectGreen/app/src/main/res/layout/fragment_user_statistics.xml
@@ -242,20 +242,19 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="75dp"
+                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/apprRwd"
-                    android:layout_width="200dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:fontFamily="@font/candara"
-                    android:text="Basic approved reward"
+                    android:text="Basic approved\nreward"
                     android:textAlignment="center"
-                    android:textSize="20sp"
-                    />
+                    android:textSize="20sp" />
 
                 <TextView
                     android:id="@+id/lblbalance"
@@ -270,17 +269,17 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="75dp"
+                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/textView27"
-                    android:layout_width="200dp"
+                    android:layout_width="210dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:fontFamily="@font/candara"
-                    android:text="Current bonus"
+                    android:text="Current bonus\npolicy"
                     android:textAlignment="center"
                     android:textSize="20sp" />
 
@@ -331,11 +330,11 @@
 
                 <TextView
                     android:id="@+id/totalCashback"
-                    android:layout_width="200dp"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:fontFamily="@font/candara"
-                    android:text="Total available cashback"
+                    android:text="Total available\ncashback"
                     android:textAlignment="center"
                     android:textSize="20sp"
                     android:textStyle="bold"
