--- a/ProjectGreen/app/src/main/res/layout/fragment_user_statistics.xml
+++ b/ProjectGreen/app/src/main/res/layout/fragment_user_statistics.xml
@@ -44,13 +44,12 @@
                 android:id="@+id/progressComment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/candara"
+                android:fontFamily="@font/candara_bold"
                 android:text="Progress Comment"
                 android:textAlignment="center"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
-                android:textSize="14sp"
-                android:textStyle="bold"/>
+                android:textSize="16sp"/>
 
             <View
                 android:id="@+id/divider"
