--- a/ProjectGreen/app/src/main/res/layout/fragment_user_statistics.xml
+++ b/ProjectGreen/app/src/main/res/layout/fragment_user_statistics.xml
@@ -49,6 +49,7 @@
                 android:textAlignment="center"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
                 android:textSize="16sp"/>
 
             <View
